@@ -3,49 +3,51 @@ package com.olo.authservice.application.usecase.permissions;
 import com.olo.authservice.domain.command.permissions.PermissionCommand;
 import com.olo.authservice.domain.exceptions.users.UserNotFoundException;
 import com.olo.authservice.domain.models.User;
-import com.olo.authservice.domain.ports.inbound.permissions.AssignUserPermissionsPort;
+import com.olo.authservice.domain.ports.inbound.permissions.RevokeUserPermissionsPort;
 import com.olo.authservice.domain.ports.outbound.UserRepositoryPort;
 import com.olo.authservice.domain.results.users.UserResult;
 import com.olo.exceptions.permissions.AssignmentNotAllowedException;
-import com.olo.exceptions.permissions.RoleNotPresentException;
+import com.olo.exceptions.permissions.DefaultTitleRemovalException;
 import com.olo.permissions.Role;
 import com.olo.permissions.Title;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @RequiredArgsConstructor
-public class AssignUserPermissionsUseCase implements AssignUserPermissionsPort {
+public class RevokeUserPermissionsImpl implements RevokeUserPermissionsPort {
 
     private final UserRepositoryPort userRepositoryPort;
 
     @Override
-    public UserResult assignUserPermissions(PermissionCommand command, Long userId) {
+    public UserResult revokeUserPermissions(PermissionCommand command, Long userId) {
         User user = userRepositoryPort.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User not found"));
 
         if (command.role() == Role.ADMIN || command.role() == Role.SUPER_ADMIN) {
-            throw new AssignmentNotAllowedException("Cannot assign ADMIN or SUPER_ADMIN roles");
+            throw new AssignmentNotAllowedException("Cannot revoke ADMIN or SUPER_ADMIN roles");
         }
 
         command.validatePermission();
 
-        List<Role> updatedRoles = Stream.concat(user.roles().stream(),
-                        (command.role().equals(Role.AUXILIARY_ADMIN)) ? Stream.of(command.role()) : Stream.empty())
-                .distinct()
-                .collect(Collectors.toList());
+        List<Role> updatedRoles = user.roles().stream()
+                .filter(r -> !(r.equals(command.role()) && r.equals(Role.AUXILIARY_ADMIN)))
+                .toList();
 
-        List<Title> updatedTitles = Stream.concat(user.titles().stream(), Stream.of(command.title()))
-                .distinct()
-                .collect(Collectors.toList());
+        boolean isDefaultTitle = updatedRoles.stream()
+                .map(Role::getDefaultTitle)
+                .anyMatch(defaultTitle -> defaultTitle.equals(command.title()));
 
-        if (updatedTitles.stream().noneMatch(title -> title.getRole().equals(command.title().getRole()))) {
-            throw new RoleNotPresentException("Role not present");
+        if (isDefaultTitle) {
+            throw new DefaultTitleRemovalException("Default title removal not allowed");
         }
 
-        User PromotedUser = new User(
+        List<Title> updatedTitles = user.titles().stream()
+                .filter(title -> !title.equals(command.title()))
+                .collect(Collectors.toList());
+
+        User RevokedUser = new User(
                 user.id(),
                 user.username(),
                 user.email(),
@@ -55,7 +57,7 @@ public class AssignUserPermissionsUseCase implements AssignUserPermissionsPort {
                 updatedTitles
         );
 
-        User savedUser = userRepositoryPort.save(PromotedUser);
+        User savedUser = userRepositoryPort.save(RevokedUser);
         return new UserResult(
                 savedUser.id(),
                 savedUser.username(),
